# src/main/java/com/ibrasoft/lensbridge/dto/auth/response/TokenValidationResponse.java
@@ -16,4 +16,5 @@ public class TokenValidationResponse {
     private String email;
     private boolean verified;
     private List<String> roles;
+    private List<String> permissions;
 }
